cmake_minimum_required(VERSION 3.19)
project(park_ji_hun C)

set(CMAKE_C_STANDARD 11)

add_executable(Unit_1 Unit1~20/Unit_1.c)
add_executable(Unit_16 Unit1~20/Unit_16.c)
add_executable(Unit_21 Unit21~40/Unit_21.c)
add_executable(Unit_7_1 Unit1~20/Unit_7_1.c)
add_executable(Unit_7_2 Unit1~20/Unit_7_2.c)
add_executable(Unit_7_3 Unit1~20/Unit_7_3.c)
add_executable(Unit_7_4 Unit1~20/Unit_7_4.c)
add_executable(main_C_Study main_C_Study/main_C_Study.c)